--- a/package.json
+++ b/package.json
@@ -2,22 +2,16 @@
   "name": "phone-app-api",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "json-server": "^0.17.0",
-    "json-server-auth": "^2.1.0",
-    "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
-  },
+  "description": "",
+  "main": "main.js",
   "scripts": {
     "start": "node main.js"
   },
   "author": "nguyendinhkien",
-  "license": "ISC"
-  
+  "license": "ISC",
+  "dependencies": {
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
+    "moment": "^2.29.1"
+  }
 }
